Fix T100435: Use evaluated material for line art loading.

Materials can be changed by other evaluations like geometry nodes,
now handles that kind of situation.